fixed index expression array test